--- a/app.yaml
+++ b/app.yaml
@@ -1,14 +1,8 @@
 version: "2025-09-18-01"          # ändert sich bei jeder Veröffentlichung
 catalogs:
-  - id: "math-basics"
-    version: "1.2.0"
-    url: "https://res.cloudinary.com/<cloud>/raw/upload/catalogs/math-basics.yml"
-    meta:
-      title: "Mathe: Grundlagen"
-      locale: "de-AT"
   - id: "tiere-de-v1"
     version: "1.0.0"
-    url: "./tiere-de-v1.yaml"
+    url: "https://raw.githubusercontent.com/svengraziani/flippi-catalog/refs/heads/main/tiere-de-v1.yaml"
     meta:
       title: "Tiere A1"
       locale: "de-AT"
